[gd_scene load_steps=5 format=3 uid="uid://dplk7w1x8y2z"]

[ext_resource type="Script" path="res://Game.gd" id="1_game_script"]
[ext_resource type="PackedScene" uid="uid://b1b2b3b4b5b6" path="res://Player.tscn" id="2_player_scene"]
[ext_resource type="PackedScene" uid="uid://d1d2d3d4d5d6" path="res://Enemy.tscn" id="3_enemy_scene"]

[sub_resource type="Environment" id="Env_Game"]
background_mode = 1
background_color = Color(0.1, 0.1, 0.12, 1)

[sub_resource type="LabelSettings" id="Label_Score"]
font_size = 24

[node name="Game" type="Node3D"]
script = ExtResource("1_game_script")
player_scene = ExtResource("2_player_scene")
enemy_scene = ExtResource("3_enemy_scene")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Env_Game")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15)
projection = 1
size = 18.0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Score: 0"
label_settings = SubResource("Label_Score")

[node name="GameOverOverlay" type="ColorRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameOverLabel" type="Label" parent="UI/GameOverOverlay/VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("Label_Score")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverOverlay/VBoxContainer"]
layout_mode = 2
text = "Restart"

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="pressed" from="UI/GameOverOverlay/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]